--- a/client/src/locales/fr.json
+++ b/client/src/locales/fr.json
@@ -2,5 +2,10 @@
   "header": {
     "title": "Mon site.",
     "description": "Un site propulsé par ReactJS."
+  },
+  "navbar": {
+    "connection": "Connexion",
+    "signout": "Déconnexion",
+    "register": "Inscription"
   }
 }
